@@ -1,3 +1,11 @@
+2006-12-11  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+
+	* unichrome/via_video.c:
+	* unichrome/via_swov.c:
+
+	Looks like the VT3336 has the same offset as the VT3259
+	for the hardware overlay
+
 2006-12-10  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 
 	* unichrome/via_memcpy.c:
